# automatic1111-extension-prompt-cleaning-hook

./: metadata.ini  pyproject.toml  readme.md
lib/: logger.py  sanitizeText.py
lib/prompt_cleaning_hook/: logger.py  loras.py  options.py  sanitizeText.py
scripts/: main.py  prompt_cleaning_hook.py
src/: cleanPrompt.py  cleanerModules.py  optionDefinitions.py
src/prompt_cleaning_hook/: cleanPrompt.py  cleanerModules.py  extension.py
